Fixed JWT Role assignment and method access